# openstack-magnum-k8s-fcos-driver

./: LICENSE  README.md  setup.cfg
k8s_fedora_coreos_t1000/: driver.py  template_def.py  version.py
k8s_fedora_coreos_t1000/templates/: fcct-config.yaml  kubecluster.yaml  kubemaster.yaml  kubeminion.yaml  user_data.json
k8s_fedora_coreos_t1000/templates/heat_resources/: lb_etcd.yaml
k8s_fedora_coreos_t1000/templates/heat_resources/environments/: enable_floating_ip.yaml  no_master_lb.yaml
k8s_fedora_coreos_t1000/templates/scripts/fragments/: calico-service-v3-3-x.sh  calico-service.sh  configure-etcd.sh  configure-kubernetes-master.sh  configure-kubernetes-minion.sh  core-dns-service.sh  enable-auto-healing.sh  enable-auto-scaling.sh  enable-cinder-csi.sh  enable-helm-tiller.sh  enable-ingress-octavia.sh  enable-ingress-traefik.sh  enable-keystone-auth.sh  enable-prometheus-monitoring.sh  flannel-service.sh  kube-apiserver-to-kubelet-role.sh  kube-dashboard-service.sh  make-cert.sh  set-search-domain.sh  start-container-agent.sh  upgrade-kubernetes.sh  write-heat-params-master.sh  write-heat-params.sh  write-kube-os-config.sh
k8s_fedora_coreos_t1000/templates/scripts/helm/: ingress-nginx.sh  metrics-server.sh  prometheus-adapter.sh  prometheus-operator.sh
k8s_fedora_coreos_t101/: driver.py  template_def.py  version.py
k8s_fedora_coreos_t101/templates/: fcct-config.yaml  kubecluster.yaml  kubemaster.yaml  kubeminion.yaml  user_data.json
k8s_fedora_coreos_t101/templates/heat_resources/: lb_api.yaml  network.yaml
(+34 files in other folders)
