[metadata]
name = k8s_fedora_coreos_t1000
summary = Kubernetes Fedora CoreOS driver for OpenStack Magnum
description_file = README.md
description_content_type = text/markdown
author = ITD27M01
author_email = igortiunov@gmail.com
home_page = http://docs.openstack.org/magnum/latest/
python_requires = >=3.6
classifier =
  Environment :: OpenStack
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[files]
packages =
  k8s_fedora_coreos_t1000
  k8s_fedora_coreos_t101

[entry_points]
magnum.drivers =
  k8s_fedora_coreos_t1000 = k8s_fedora_coreos_t1000.driver:Driver
  k8s_fedora_coreos_t101 = k8s_fedora_coreos_t101.driver:Driver

[bdist_rpm]
requires =
  openstack-magnum-common

[pbr]
skip_changelog = True
skip_authors = True
